    * 0604 FIX: windows_updates: now handles situations with forced reboot and no limits correctly
    * 0605 FIX: enterasys_cpu_util enterasys_lsnat: syntax fixes

    Multisite:
    * 0779 Hostgroups (Summary): Empty hostgroups are no longer shown (can be re-enabled by filter)

    WATO:
    * 0784 Improved security of WATO bulk inventory by using transaction ids
    * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...

    Notifications:
    * 0754 Allow users to disable their notifications completely...
    * 0755 Added variables LASTHOSTUP_REL and LASTSERVICEOK_REL to notification context...
    * 0752 FIX: FIX: compute correct state transitions for notifications...
    * 0753 FIX: FIX: correctly show original state in HTML notification mails...

    Reporting & Availability:
    * 0756 Allow availability of multisite BI aggregates at once...

    Livestatus:
    * 0747 FIX: livestatus table hostsbygroup: fixed bug with group_authorization strict...


1.2.5i2:
    Checks & Agents:
    * 0147 enterasys_fans: New Check to monitor fans of enterasys swichtes
    * 0774 ibm_svc_nodestats.diskio: new check for disk troughput per node on IBM SVC / V7000 devices
    * 0775 ibm_svc_systemstats.diskio: new check for disk throughput in IBM SVC / V7000 devices in total
    * 0764 lnx_quota: Added new check to monitor Linux File System Quota...
    * 0776 ibm_svc_nodestats.cpu_util: new check for CPU Utilization per Node on IBM SVC / V7000 devices
    * 0600 nfsexports.solaris: new agent plugin for monitoring nfs exports on solaris systems...
    * 0743 mem, fortigate_memory, solaris_mem: display total SWAP info in check output
    * 0745 drbd: Roles and diskstates are now configurable via WATO...
    * 0740 FIX: winperf_if: now able to handle bandwidth > 4GBit...

    Multisite:
    * 0765 NagVis-Maps-Snapin: Now visualizes downtime / acknowledgment states of maps...