@@ -35,6 +35,7 @@
 
     WATO:
     * 0784 Improved security of WATO bulk inventory by using transaction ids
+    * 0880 Added support for 389 Directory Server to LDAP connector
     * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...
 
     Notifications:
